--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If your target is formed by classes, decide how they are being used during training and how they are going to be shuffle. You can search for similar paper to decide how is the best way to do it. Para el bias buscaremos algún paper que nos diga con que precisión hacen los humanos la tarea que va a realizar el modelo de Deep Learning.\n",
+    "If your target is formed by classes, decide how they are being used during training and how they are going to be shuffle. You can search for similar paper to decide how is the best way to do it. Para el bias buscaremos algún paper que nos diga con que precisión hacen los humanos la tarea que va a realizar el modelo de Deep Learning.\n"
    ]
   },
   {
